// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Radio snapshots with another props 1`] = `
<ContextProvider
  value={Object {}}
>
  <Styled(Component)
    checked={true}
    label="Text"
    onChange={[MockFunction]}
    size="medium"
    value="TEXT"
  />
</ContextProvider>
`;

exports[`Component: Radio snapshots with default props 1`] = `
<ContextProvider
  value={Object {}}
>
  <Styled(Component)
    checked={true}
    label="Text"
    onChange={[MockFunction]}
  />
</ContextProvider>
`;
